2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/loginprompt.c: Use exit(EXIT_FAILURE) instead of
	exit(1).
	* libmisc/loginprompt.c: Avoid implicit conversion of pointers to
	booleans.
	* libmisc/loginprompt.c: Ignore return value of putc().

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/env.c, libmisc/age.c: Added splint annotations.
	* libmisc/age.c: Added brackets and parenthesis.
	* libmisc/age.c: Ignore the return value of fclose (file opened
	read-only)
	* libmisc/age.c: Ignore puts() return value.
	* libmisc/age.c: Use exit(EXIT_FAILURE) instead of exit(1).
	* libmisc/age.c: Avoid assignments in comparisons.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/fputsx.c, lib/gshadow.c, lib/commonio.h: Added splint
	annotations.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/get_gid.c: gidstr should not be NULL, but the check was
	meant to make sure it is not empty.
	* lib/get_uid.c: Likewise.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/getdef.c: Added splint annotations.
	* lib/getdef.c: Ignore fputs() return value.
	* lib/getdef.c: Use EXIT_FAILURE / EXIT_SUCCESS for exit()

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* src/faillog.c: Added splint annotations.
	* src/faillog.c: Cast ID to ulongs and use ulong formats for IDs.
	* src/faillog.c: Ignore fflush() return value.
	* src/faillog.c: Added parenthesis.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* src/grpck.c: Ignore puts return value.
	* src/grpck.c: Avoid variable format string.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* src/lastlog.c: Use EXIT_FAILURE / EXIT_SUCCESS for exit()
	* src/lastlog.c: Added splint annotations.
	* src/lastlog.c: Avoid global pwent.
	* src/lastlog.c: Cast ID to ulongs and use ulong formats for IDs.
	* src/lastlog.c: Avoid assignment in comparisons.